test/classes/vass/ref-like-intents/inout-subclass.good
inout-subclass.chpl:14: error: unresolved call 'procInoutC(D)'
inout-subclass.chpl:6: note: candidates are: procInoutC(inout arg: C)
